resources/css/oc.css
body,
html,
.body {
  background-color: white;
  color: #34414F;
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

table {
  background-color: white !important;
}

table.white-block {
  background: white !important;
}

table.body-block {
  background-color: white !important;    
  border-left: 1px solid #F2F1ED;
  border-right: 1px solid #F2F1ED;
}

table.body-block.top {
  border-top: 1px solid rgba(228, 227, 222, 0.7);
  border-left: 1px solid rgba(228, 227, 222, 0.7);
  border-right: 1px solid rgba(228, 227, 222, 0.7);
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

table.body-block.bottom {
  border-bottom: 1px solid rgba(228, 227, 222, 0.7);
  border-left: 1px solid rgba(228, 227, 222, 0.7);
  border-right: 1px solid rgba(228, 227, 222, 0.7);
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

table.note-block {
  background: white !important;
  border-left: 1px solid rgba(228, 227, 222, 0.7);
  border-right: 1px solid rgba(228, 227, 222, 0.7);
}

table.note-block.top {
  border-top: 1px solid rgba(228, 227, 222, 0.7);
  border-left: 1px solid rgba(228, 227, 222, 0.7);
  border-right: 1px solid rgba(228, 227, 222, 0.7);
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

table.note-block.bottom {
  border-bottom: 1px solid rgba(228, 227, 222, 0.7);
  border-left: 1px solid rgba(228, 227, 222, 0.7);
  border-right: 1px solid rgba(228, 227, 222, 0.7);
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

table th, 
table.body .columns,
table.body .column {
  padding: 0px !important;
}

table th.body-spacer {
  background-color: white !important;
}

h1 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 28px;
  font-weight: bold;  
  color: #34414F;
  margin: 0px;
}

h2 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 22px;
  font-weight: bold;  
  color: #34414F;
  margin: 0px;
}

p {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 17px;
  color: #34414F;
  line-height: 1.5;
  margin: 0px;
}

p.attribution {
  font-size: 14px;
  color: #898D93;
}

table.cta-button {
  height: 40px;
  border-radius: 40px;
  background-color: #3FBD7C !important;
  width: auto !important;
}

table.post-button {
  border-collapse: separate;
  height: 40px;
  border-radius: 40px;
  border: 1px solid #D4F6E4;
  background-color: white !important;
}

span.note-author {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  font-weight: bold;
  padding-top: 12px;
  padding-left: 8px;
}

span.note-body {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: 400;
}

span.button-text {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: bold;
  padding-top: 13px;
}

span.cta-text {
  float: left;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: bold;
  height: 16px;
  display: block;
  padding-top: 12px;
  padding-right: 20px;
  padding-bottom: 12px;
  padding-left: 20px;
  border-radius: 40px;
  background-color: #3FBD7C;
  color: white;
}

table.cta-button span.button-text {
  color: white;
}

table.post-button span.button-text {
  color: #3FBD7C;
}

table.footer p {
  color: #C4C6C9;
  font-size: 14px;
}

table.footer a {
  font-weight: bold;
  color: #3FBD7C;
}

/* New template specific css */
.footer-table {
  background-color: white !important;
}

.footer-top-border {
  border-top: 1px solid #F0F0F1;
}

p.header-paragraph {
  text-align: right;
  font-size: 14px;
  color: #898D93;
}

p.header-paragraph a {
  color: lightgreen;
  font-size: 14px;
  color: #3FBD7C;
  text-decoration: underline;
}

table.header-bottom {
  border-bottom: 1px solid #F0F0F1;
}

p.footer-paragraph {
  color: #898D93;
  font-size: 14px;
  font-weight: 400;
}

p.footer-paragraph.bottom-footer, p.footer-paragraph.bottom-footer a {
  color: #C4C6C7;
}

p.footer-paragraph a {
  color: #898D93;
  text-decoration: underline;
  font-weight: 400;
}

table.footer-table a.footer-link {
  float: right;
  margin-left: 16px;
  text-decoration: underline;
}

.note-author-avatar {
  float: left;
}

span.note-author-name {
  float: left;
  padding-top: 10px;
  margin-left: 8px;
  font-weight: bold;
  font-size: 14px;
}

table.horizontal-line {
  border-top: 1px solid #F0F0F1;
}

p.digest-help {
  color: #898D93;
  font-size: 14px;
}

p.digest-help a{
  color: #3FBD7C;
  text-decoration: underline;
}

th.footer-icon img {
  float: right;
}

img.read-post-image {
  width: 16px;
  height: 16px;
  float: left;
}

span.read-post-text {
  float: left;
  margin-left: 8px;
  color: #3FBD7C;
  font-size: 14px;
}

.digest-footer-table {
  background-color: #F2F1ED !important;
}

p.digest-bottom-footer-paragraph {
  color: rgba(137, 141, 147, 0.5);
  font-size: 14px;
  font-weight: 400;
}

p.digest-footer-paragraph, p.digest-footer-paragraph a {
  color: #898D93;
  font-size: 14px;
  font-weight: 400;
}

p.digest-footer-paragraph a {
  font-weight: 400;
  text-decoration: underline;
}

